# openGL

./: CMakeLists.txt  LICENSE
include/glad/: glad.h
include/src/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
shaders/: default.frag  default.vert  light.frag  light.vert
src/: Camera.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
